# pygamestudio

./: .gitignore  LICENSE  README.md  README_zh-CN.md  aaa.json  pyproject.toml
.github/: FUNDING.yml
src/pygamestudio/: a.json  aaa.json  main.py  test.py  test2.py  tree.json
src/pygamestudio/api/i18n/: translator.py
src/pygamestudio/api/runtime/: config.py  scene.py
src/pygamestudio/common/i18n/: translator.py
src/pygamestudio/common/res/: resources.qrc  resources_rc.py
src/pygamestudio/common/utils/: config.py  constant.py  decorator.py  path.py  project.py
src/pygamestudio/editor/asset/: command.py  data.py  delegate.py  menu.py  model.py  search.py  test.py  test2.py  tree.py  tree2.py  type.py  widget.py  window.py
src/pygamestudio/editor/console/: browser.py  menu.py  search.py  test.py  widget.py  window.py
src/pygamestudio/editor/gui/: window.py
src/pygamestudio/editor/object/: command.py  data.py  delegate.py  menu.py  model.py  search.py  test.py  test2.py  tree.py  tree2.py  type.py  widget.py  window.py
src/pygamestudio/editor/scene/: canvas.py  grid.py  window.py
src/pygamestudio/game/core/: manager.py
src/pygamestudio/game/object/: base.py  canvas.py  circle.py  ellipse.py  line.py  manager.py  rect.py  scene.py  text.py  type.py
src/pygamestudio/gui/: main.py  window.py
src/pygamestudio/gui/about/: window.py
src/pygamestudio/gui/asset/: delegate.py  menu.py  model.py  search.py  tree.py  widget.py  window.py
src/pygamestudio/gui/base/: window.py
src/pygamestudio/gui/console/: browser.py  logger.py  menu.py  search.py  type.py  widget.py  window.py
src/pygamestudio/gui/dashboard/: config.py  create.py  delegate.py  dialog.py  list.py  menu.py  model.py  search.py  type.py  widget.py  window.py
src/pygamestudio/gui/hierarchy/: command.py  delegate.py  menu.py  search.py  tree.py  widget.py  window.py
src/pygamestudio/gui/inspector/: container.py  widget.py  window.py
src/pygamestudio/scene/: display.py
(+77 files in other folders)
