# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-awesome-library" # 在PyPI上显示的名字，必须唯一。只能用字母、数字、连字符(-)
version = "0.1.0"          # 版本号，遵循语义化版本控制
description = "A brief description of my awesome library." # 简短描述
readme = "README.md"        # 长描述文件
license = {file = "LICENSE"} # 许可证文件
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["awesome", "utility", "example"]
classifiers = [ # 分类器，帮助别人找到你的库
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", # 确保与你的LICENSE文件一致
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [ # 你的库所依赖的其他第三方库
    "requests>=2.25.1",
    "click>=7.1.2", 
]

[project.urls]
Homepage = "https://github.com/yourusername/my_awesome_library"
Repository = "https://github.com/yourusername/my_awesome_library"
"Bug Tracker" = "https://github.com/yourusername/my_awesome_library/issues"

# 如果你的包有可执行命令（命令行工具）
[project.scripts]
my-command = "my_awesome_library.core:main"
