[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygamestudio"
version = "0.0.1a0"
authors = [{ name="Louis Ren", email="louis@pygamestudio.com" }]
description = "Let's create pygame visually!"
readme = "README.md"
license-files = ["LICEN[CS]E*"]
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
]
requires-python = ">=3.9"